--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
           <li class="item">
             <a href="mailto:info@devstudio.com" class="header-contact link">
               <svg class="contact-icon" width="16" height="12">
-                <use href="./img/sprite.svg#icon-envelope"></use>
+                <use href="./img/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -44,7 +44,7 @@
           <li class="item">
             <a href="tel:+380961111111" class="header-contact link">
               <svg class="contact-icon" width="10" height="16">
-                <use href="./img/sprite.svg#icon-smartphone"></use>
+                <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -79,7 +79,20 @@
           <ul class="portfolio list">
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img8.jpg" alt="Відкритий ноутбук з сайтом Технокряк" width="370" />
+                <div class="portfolio-description">
+                  <img
+                    src="./img/img8.jpg"
+                    alt="Відкритий ноутбук з сайтом Технокряк"
+                    width="370"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -88,7 +101,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img9.jpg" alt="Хлопці грають у баскетбол" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img9.jpg" alt="Хлопці грають у баскетбол" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -97,7 +120,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img10.jpg" alt="Логотип ресторана Seafood" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img10.jpg" alt="Логотип ресторана Seafood" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -106,7 +139,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img11.jpg" alt="Навушники" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img11.jpg" alt="Навушники" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Проєкт Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -115,7 +158,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img12.jpg" alt="Дві коробки" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img12.jpg" alt="Дві коробки" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Проєкт Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -125,7 +178,17 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img13.jpg" alt="Монітор комп'ютера" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img13.jpg" alt="Монітор комп'ютера" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -134,7 +197,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img14.jpg" alt="Відкритий журнал" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img14.jpg" alt="Відкритий журнал" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -143,7 +216,17 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
-                <img src="./img/img15.jpg" alt="Етикетка фірми LAB" width="370" />
+                <div class="portfolio-description">
+                  <img src="./img/img15.jpg" alt="Етикетка фірми LAB" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Проект LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -151,8 +234,18 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" c>
-                <img src="./img/img16.jpg" alt="Людина працює на комп'ютері" width="370" />
+              <a class="portfolio-link" href="">
+                <div class="portfolio-description">
+                  <img src="./img/img16.jpg" alt="Людина працює на комп'ютері" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-list">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -203,7 +296,7 @@
                   rel="nofollow noopener noreferrer"
                 >
                   <svg class="footer-social-icon" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-instagram"></use>
+                    <use href="./img/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -216,7 +309,7 @@
                   rel="nofollow noopener noreferrer"
                 >
                   <svg class="footer-social-icon" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-twitter"></use>
+                    <use href="./img/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
@@ -229,7 +322,7 @@
                   rel="nofollow noopener noreferrer"
                 >
                   <svg class="footer-social-icon" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-facebook"></use>
+                    <use href="./img/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
@@ -242,7 +335,7 @@
                   rel="nofollow noopener noreferrer"
                 >
                   <svg class="footer-social-icon" width="20" height="20">
-                    <use href="./img/sprite.svg#icon-linkedin"></use>
+                    <use href="./img/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
