--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop in-hedden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-button" type="button" data-modal-close>
           <svg class="modal-icon" width="11" height="11">
